Test: Adding and modifying tests